--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
 
     <script>
         // API Configuration
-        const API_BASE = '/.netlify/functions/api';
+        const API_BASE = '/api';
 
         // Function to create a task card
         function createTaskCard(task) {
